# RL25-Final-Project

./: README.md
ros2_fra2mo/: CMakeLists.txt  README.md  package.xml
ros2_fra2mo/config/: explore.yaml  fra2mo_controllers.yaml  navigation.yaml  slam.yaml
ros2_fra2mo/launch/: cooperative_system.launch.py  display_fra2mo.launch.py  fra2mo_amcl.launch.py  fra2mo_explore.launch.py  fra2mo_navigation.launch.py  fra2mo_slam.launch.py  gazebo_fra2mo.launch.py  gazebo_fra2mo_coop.launch.py  robots_bringup.launch.py
ros2_fra2mo/maps/: map.pgm  map.yaml
ros2_fra2mo/meshes/gripper/collision/: fra2mo_fixed_base.stl  fra2mo_left_finger.stl  fra2mo_lift.stl  fra2mo_right_finger.stl
ros2_fra2mo/meshes/gripper/visual/: fra2mo_fixed_base.stl  fra2mo_left_finger.stl  fra2mo_lift.stl  fra2mo_right_finger.stl
ros2_fra2mo/models/container/: container.sdf  model.config
ros2_fra2mo/models/obstacle_1/: model.config  obstacle_1.sdf
ros2_fra2mo/models/obstacle_1/mesh/: obstacle_1.stl
ros2_fra2mo/models/obstacle_2/: model.config  obstacle_2.sdf
ros2_fra2mo/models/obstacle_2/mesh/: obstacle_2.stl
ros2_fra2mo/models/obstacle_3/: model.config  obstacle_3.sdf
ros2_fra2mo/models/obstacle_3/mesh/: obstacle_3.stl
ros2_fra2mo/models/obstacle_4/: model.config  obstacle_4.sdf
ros2_fra2mo/models/obstacle_4/mesh/: obstacle_4.stl
ros2_fra2mo/models/obstacle_5/: model.config  obstacle_5.sdf
ros2_fra2mo/models/obstacle_5/mesh/: obstacle_5.stl
ros2_fra2mo/models/walls/: model.config  walls.sdf
ros2_fra2mo/models/walls/mesh/: walls.stl
ros2_fra2mo/rviz_conf/: amcl_view.rviz  explore.rviz  fra2mo_conf.rviz  navigation.rviz  slam_view.rviz
ros2_fra2mo/src/: fra2mo_object_manager.cpp
ros2_fra2mo/urdf/: d435_gazebo_macro.xacro  fra2mo.urdf.xacro  fra2mo_base_macro.xacro  fra2mo_gripper.urdf.xacro  lidar_gazebo_macro.xacro  test.urdf
ros2_fra2mo/worlds/: coop_world.sdf  leonardo_race_field.sdf
ros2_iiwa/iiwa_description/config/: iiwa_controllers.yaml  initial_positions.yaml
ros2_iiwa/iiwa_description/launch/: aruco_gazebo.launch.py  gazebo_iiwa_coop.launch.py
ros2_iiwa/iiwa_description/meshes/gripper/collision/: gripper_base_collision.stl  left_finger_collision.stl  right_finger_collision.stl
ros2_iiwa/iiwa_description/meshes/gripper/visual/: gripper_attack.stl  gripper_base.stl  left_finger.stl  right_finger.stl
ros2_iiwa/iiwa_description/moveit2/: iiwa_moveit_controller_config.yaml
ros2_iiwa/iiwa_description/ros2_control/: iiwa.r2c_hardware.xacro  iiwa.r2c_hw_ds.xacro
ros2_iiwa/iiwa_description/rviz/: iiwa.rviz
ros2_iiwa/iiwa_description/urdf/: gripper.urdf.xacro  iiwa.urdf.xacro
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/action/: ExecuteTrajectory.action
ros2_kdl_package/config/: kdl_params.yaml
ros2_kdl_package/src/: kdl_robot.cpp  object_dispatcher.cpp  ros2_kdl_node.cpp  ros2_kdl_node_old.cpp
