<?xml version="1.0"?>
<package format="3">
  <name>ros2_fra2mo</name>
  <version>0.0.1</version>
  <description>Il pacchetto ros2_fra2mo</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>vision_opencv</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_srvs</build_depend>


  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rviz2</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>nav2_msgs</build_export_depend>
  <build_export_depend>rclcpp_action</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>action_msgs</build_export_depend>
  <build_export_depend>builtin_interfaces</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>vision_opencv</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>



  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>vision_opencv</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
