<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_kdl_package</name>
  <version>0.0.0</version>
  <description>Package containing KDL-based nodes, object dispatcher, and trajectory actions for ROS2.</description>
  <maintainer email="mario.selvaggio@unina.it">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>Eigen3</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>  
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>



  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
